syntax = "proto3";

option go_package = "github.com/acme-sky/geodistance-api/proto";

package distance;

// The definition for a distance service
service Distance
{
    // Sends a distance value in meters
    rpc FindDistance(DistanceRequest) returns (DistanceResponse) {}
}

// Mesasage that refers to a map position tuple (latitude / longitude)
message MapPosition
{
    float latitude = 1;
    float longitude = 2;
}

// The request message containing two tuple of lat and lon
message DistanceRequest
{
    MapPosition origin = 1;
    MapPosition destination = 2;
}

// The response message containing the distance between the two positions in
// meters format
message DistanceResponse
{
    string origin = 1;
    string destination = 2;
    int32 distance = 3;
}
